images: add table structure to figcation to stop text overflowing img fixes #106

--- a/apps/core/static/scss/_blocks.scss
+++ b/apps/core/static/scss/_blocks.scss
@@ -48,7 +48,6 @@
 
     .image-with-caption {
         float: left;
-        text-align: right;
     }
 }
 
